tests/diagnostics/non_bool_condition.kal
# The condition of an `if` must be bool, not an integer.
fn f(n: i64) -> i64 = if n then 1 else 2;
